# cat-motion

./: .gitignore  README.md  cat_motion.yml  pyproject.toml  train_embeddings.py
cat_motion/: __init__.py  config.py  paths.py  training.py  utils.py
cat_motion/vision/: __init__.py  detection.py  embedding.py
collector/: __init__.py  service.py
configs/: cat_motion.yml
motion_config/: motion.conf.example
processor/: __init__.py  pipeline.py
web/: __init__.py  app.py  auth.py
web/static/: styles.css
web/templates/: base.html  clips.html  index.html  login.html  training.html  unlabeled.html
