[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-motion"
version = "0.1.0"
description = "Motion-triggered Raspberry Pi capture + recognition pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Pi Cam"}]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.23",
    "watchdog>=4.0",
    "typer>=0.12",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "Jinja2>=3.1",
    "opencv-python-headless>=4.8",
    "numpy>=1.26",
    "orjson>=3.9",
    "rich>=13.7",
    "PyYAML>=6.0",
    "onnxruntime>=1.16",
    "torch>=2.1",
    "torchvision>=0.16",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
pi = [
    "psutil>=5.9",
]

[project.scripts]
cat-motion-collector = "collector.service:cli"
cat-motion-processor = "processor.pipeline:cli"
cat-motion-web = "web.app:cli"
cat-motion-train = "train_embeddings:cli"

[tool.setuptools.packages.find]
include = ["cat_motion*", "collector*", "processor*", "web*"]
exclude = ["configs*", "motion_config*"]
